--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,19 @@
             <plugin>
               <artifactId>maven-pmd-plugin</artifactId>
             </plugin>
-
+1
             <plugin>
-              <artifactId>maven-surefire-report-plugin</artifactId>
+                      
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.22.1</version>
+               <configuration>
+               <useSystemClassLoader>false</useSystemClassLoader>
+               </configuration>
+     
+     
             </plugin>
-
+1
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>findbugs-maven-plugin</artifactId>
